--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-debugger": "^1.1.0"
@@ -30,6 +31,7 @@
     "metro-react-native-babel-preset": "0.76.5",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.3.2",
     "typescript": "4.8.4"
   },
   "engines": {
