--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.1",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "^13.2.2"
+    "react-native-svg": "^13.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
