--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-svg": "^13.10.0"
   },
   "devDependencies": {
