--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-svg": "^13.10.0"
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.22.1",
+    "react-native-svg": "^13.10.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
